<resources>
    <string name="app_name">Student</string>
    <string name="button_review">Просмотр</string>
    <string name="button_editing">Редактирование</string>
    <string name="button_save">Сохранить</string>
    <string name="menu_about">О программе</string>
    <string name="toast_save">Изменения сохранены</string>
    <string name="toast_review">Просмотр деталей студента</string>
    <string name="student_editing">Данные изменены</string>
    <string name="student_edit">Изменение</string>
    <string name="student_save">Студент сохранен</string>
    <string name="student_name">Имя</string>
    <string name="student_surname">Фамилия</string>
    <string name="student_age">Возраст</string>
    <string name="toast_age_zero">Стать студентом \nв 0 лет невозможно!!!</string>
    <string name="enter_student_age">Введите возраст</string>
    <string name="enter_student_lastname">Введите Фамилию</string>
    <string name="enter_student_firstname">Введите имя</string>
    <string name="button_dell">Удалить</string>
    <string name="button_add_student">Добавить</string>
</resources>
